--- a/style.css
+++ b/style.css
@@ -50,3 +50,17 @@ body{
     padding: 30px;
     font-size: 18px;
 }
+
+.madeby{
+    text-align: center;
+    font-size: 20px;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+a{
+    text-decoration: none;
+    color: #87cf75
+}
