--- a/style.css
+++ b/style.css
@@ -2,65 +2,56 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
-    width: 100%;
-    height: 100vh;
     font-family: sans-serif;
-    background: linear-gradient(#111111,#313131);
+    background: url("bg.jpg");
+
+    
 }
 
 .content{
+    z-index: 10;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    
 }
 
-.content .heading{
-    padding: 40px 0;
+.heading h1{
+    font-size: 4rem;  
 }
 
-.content .heading h1{
-    font-size: 50px;
+.heading i{
+    padding-left: 1rem;
 }
 
-.content .heading i{
-    padding-left: 20px;
+.location span{
+    font-size: 2rem;
+    padding: 0 0.25rem;
+    text-transform: uppercase;
+    font-weight: bold;
 }
-
-.location{
-    width: 100%;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
 
 .temperature{
-    text-align: center;
+    font-size: 1.5rem;
 }
-
-.temperature span{
-    font-size: 20px;
+.right-temp{
+    cursor: pointer;
+    padding-left: 0.25rem;
+    color: aqua;
 }
 
 .climate{
-    text-align: center;
-    padding: 30px;
-    font-size: 18px;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
-.madeby{
+.fix{
+    margin: 80px 0;
     text-align: center;
-    font-size: 20px;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 }
 
 a{
     text-decoration: none;
-    color: #87cf75
+    color: black;
 }
